--- a/mods/ts/rules/critters.yaml
+++ b/mods/ts/rules/critters.yaml
@@ -71,6 +71,7 @@ DOGGIE:
 		IconSequence: testdisplay
 		IconPalette: player
 		IconPaletteIsPlayerPalette: true
+		IconScale: 0.9
 	Crushable:
 		CrushClasses: bigguy
 	Targetable@Crushable:
@@ -109,6 +110,7 @@ VISC_SML:
 		IconSequence: idle
 		IconPalette: player
 		IconPaletteIsPlayerPalette: true
+		IconScale: 0.6
 	Targetable@Crushable:
 		TargetTypes: Crushable
 
@@ -156,6 +158,7 @@ VISC_LRG:
 		IconSequence: idle
 		IconPalette: player
 		IconPaletteIsPlayerPalette: true
+		IconScale: 0.7
 	Targetable@Crushable:
 		TargetTypes: Crushable
 
