--- a/mods/ts/3dtest/testrulse.yaml
+++ b/mods/ts/3dtest/testrulse.yaml
@@ -14,13 +14,16 @@
 		HipMesh: gear01_body-hip
 		ThighMesh: gear01_body-thigh
 		CoveringMaterail: mdx_underwear
-		RequiresCondition: !nocloth
-	GrantConditionOnDamageState@test:
-		Condition: nocloth
-		ValidDamageStates: Heavy, Critical
+		RequiresCondition: hascloth
+	# GrantConditionOnDamageState@test:
+	# 	Condition: nocloth
+	# 	ValidDamageStates: Heavy, Critical
 	SpeedMultiplier@test:
-		RequiresCondition: nocloth
-		Modifier: 120
+		RequiresCondition: hascloth
+		Modifier: 90
+	DamageMultiplier@test:
+		RequiresCondition: hascloth
+		Modifier: 75
 	ExplosionOnDamageTransition:
 		Weapon: ProtonFlameMissileCluster
 		DamageState: Heavy
@@ -29,7 +32,7 @@
 		Weapon: ProtonFlameMissileClusterSmall
 		Interval: 50
 		Offset: 0,0,1024
-		RequiresCondition: nocloth
+		RequiresCondition: !hascloth
 	# WithMeshCloth@skirt:
 	# 	Mesh: skirt-split
 	# 	Masks: Hip
@@ -193,9 +196,15 @@ RUTEST2:
 		Bounds: 905, 3000, 0, -1300
 	Voiced:
 		VoiceSet: Oxanna
-	# Inventory:
-	# 	Name: test
-	# 	InitItems: item1, item2, item3, item4, item5, item6
+	EquipmentSlot@test1:
+		Name: testslot1
+		SlotType: Item
+	EquipmentSlot@test2:
+		Name: testslot2
+		SlotType: Item
+	Inventory:
+		Name: test
+		InitItems: conditionitem1, item2, item6
 	ChangesHealth:
 		Step: 500
 
