--- a/mods/ts/weapons/otherweapons.yaml
+++ b/mods/ts/weapons/otherweapons.yaml
@@ -162,6 +162,7 @@ Bomb:
 	ReloadDelay: 60
 	Burst: 5
 	BurstDelays: 6
+	Report: a10whistle1.wav
 	Range: 2c512
 	TargetActorCenter: true
 	ValidTargets: Ground, Trees
@@ -205,6 +206,7 @@ A10Napalm:
 	Burst: 6
 	BurstDelays: 10
 	Range: 4c256
+	Report: a10whistle1.wav
 	TargetActorCenter: true
 	ValidTargets: Ground, Trees
 	Projectile: GravityBomb
@@ -552,3 +554,32 @@ WalkImpact:
 		Intensity: 1
 		Multiplier: 0,1
 		ValidTargets: Ground, Trees
+
+VeinBomb:
+	ReloadDelay: 60
+	Range: 2c512
+	Report: a10whistle1.wav
+	ValidTargets: Ground
+	Projectile: GravityBomb
+		Velocity: 72, 0, -90
+		Acceleration: 0, 0, -8
+		Shadow: true
+		Palette: ra
+		Image: zbomb
+		Palette: player
+		IsPlayerPalette: true
+	Warhead@5Actor: SpawnActor
+		Actors: minivein
+		ForceGround: true
+		Range: 4
+		AirThreshold: 8c0
+		ValidTargets: Ground, Water, Air
+	Warhead@Res1: CreateResource
+		AddsResourceType: Veins
+		Size: 0,0
+		Density: 1
+	Warhead@Res: CreateResource
+		AddsResourceType: Veins
+		Size: 1,1
+		Density: 1
+		Delay: 18
