--- a/mods/ts/weapons/superweapons.yaml
+++ b/mods/ts/weapons/superweapons.yaml
@@ -3,21 +3,21 @@ MultiCluster:
 	ValidTargets: Ground, Water, Air, Trees
 	-Report:
 	Projectile: VectorBooster
-		Speed: 120
+		Speed: 100
 		MinSpeed: 55
-		MaxSpeed: 388
-		Inaccuracy: 1c0
+		MaxSpeed: 200
+		Inaccuracy: 0
 		Acceleration: 10
-		# MaximumLaunchSpeed: 120
-		# MinimumLaunchAngle: -255
-		# MaximumLaunchAngle: 255
-		# RangeLimit: 10c0
-		# VerticalRateOfTurn: 64
-		LaunchAngle: 0
+		IgnitionDelay: 15
+		HorizonRotationRate: 5
+		VerticalRotationRate: 3
+		LockOnDelay: 10
+		ContrailDelay: 15
+		LaunchAngle: -128
 		LifeTime: 66
-		AllowSnapping: false
-		HorizonRotationRate: 14
-		VerticalRotationRate: 11
+		AirburstAltitude: 5c0
+		Width: 40
+		MeshScale: 3
 	Warhead@1Dam: SpreadDamage
 		Spread: 458
 		Damage: 22000
@@ -33,11 +33,11 @@ MultiCluster:
 		ImpactActors: false
 		Explosions: large_twlt
 		ImpactSounds: expnew09.aud
-	Warhead@5Res: DestroyResource
-		Size: 2
-		ResourceAmount: 4
-		ResourceTypes: Tiberium, BlueTiberium
-
+	Warhead@Cluster: FireCluster
+		Weapon: ProtonFlameMissileClusterSmall
+		RandomClusterCount: 10
+		Dimensions: 7,7
+		Footprint: __xxx__ _xxXxx_ xxxxxxx xXxXxXx xxxxxxx _xxXxx_ __xxx__
 
 ClusterMissile:
 	ValidTargets: Ground, Water, Air, Trees
@@ -58,15 +58,20 @@ ClusterMissile:
 		ImpactSounds: expnew19.aud
 		ImpactActors: false
 		ValidTargets: Ground, Water, Air
-	Warhead@Cluster: FireCluster
-		Weapon: MultiCluster
-		RandomClusterCount: 13
-		Dimensions: 7,7
-		Footprint: __xxx__ _xxXxx_ xxxxxxx xXxXxXx xxxxxxx _xxXxx_ __xxx__
 	Warhead@Shake: ShakeScreen
 		Duration: 20
 		Intensity: 5
 		Multiplier: 1,1
+	Warhead@Cluster: FireRadius
+		Weapon: MultiCluster
+		StartOffset: 0,3333,0
+		FireCount: 3
+		ForceTargetGround: true
+	# Warhead@ClusterMid: FireRadius
+	# 	Weapon: MultiCluster
+	# 	StartOffset: 0,0,0
+	# 	FireCount: 1
+	# 	ForceTargetGround: true
 
 ChemicalMissile:
 	Inherits: ClusterMissile
