Make AutoCarryable can be turn off by AutoCarryCondition

--- a/mods/ts/rules/shared-vehicles.yaml
+++ b/mods/ts/rules/shared-vehicles.yaml
@@ -141,6 +141,13 @@ HARV:
 			BlueTiberium: pip-blue
 	WithDecoration@UNDERGROUND:
 		Sequence: harvester
+	-Carryable:
+	CarryableHarvester:
+	AutoCarryable: 
+		#MinDistance: 10240
+		RequiresCondition: !inside-tunnel
+		LockedCondition: carried
+		CarriedCondition: carring
 
 LPST:
 	Inherits: ^Tank
