--- a/mods/ts/rules/player.yaml
+++ b/mods/ts/rules/player.yaml
@@ -111,8 +111,8 @@ Player:
 		ExploredMapCheckboxEnabled: true
 	LobbyPrerequisiteCheckbox@GLOBALFACTUNDEPLOY:
 		ID: factundeploy
-		Label: Redeployable MCVs
-		Description: Allow undeploying Construction Yard
+		Label: redeployable-mcvs.label
+		Description: redeployable-mcvs.description
 		Enabled: True
 		DisplayOrder: 7
 		Prerequisites: global-factundeploy
@@ -131,19 +131,19 @@ Player:
 		ArrowSequence:
 		CircleSequence:
 	ProvidesTechPrerequisite@low:
-		Name: Low
+		Name: low
 		Prerequisites: techlevel.low
 		Id: low
 	ProvidesTechPrerequisite@medium:
-		Name: Medium
+		Name: medium
 		Prerequisites: techlevel.low, techlevel.medium
 		Id: medium
 	ProvidesTechPrerequisite@nosuper:
-		Name: No Powers
+		Name: no-powers
 		Prerequisites: techlevel.low, techlevel.medium, techlevel.high
 		Id: nopowers
 	ProvidesTechPrerequisite@all:
-		Name: Unrestricted
+		Name: unrestricted
 		Prerequisites: techlevel.low, techlevel.medium, techlevel.high, techlevel.superweapons
 		Id: unrestricted
 	ResourceStorageWarning:
